词云 代码备份

--- a/logschool.html
+++ b/logschool.html
@@ -7,6 +7,8 @@
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.bootcss.com/echarts/4.0.4/echarts.js"></script>
+<script src="worldcloud.js"></script>
+<script src="echarts.js"></script>
 <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
 <div class="container">
     <div id="row_1">
@@ -87,31 +89,32 @@
     <div id="row_4">
         <h2>三、每月使用情况</h2>
         <p>××××申请开通试用Scholargate全球高水平学者数据库以来，每月访问人次、点击次数如图3-1：</p>
-        <div id="picture_1" class="col-md-6" style="height:400px"></div>
+        <div id="picture_1" class="col-md-12" style="height:400px"></div>
     </div>
     <div id="row_5">
-        <h2>一、试用单位基本信息</h2>
-        <div id="picture_2" class="col-md-6" style="height:400px"></div>
+        <h2>四、Top10使用情况统计</h2>
+        <h4>4.1 IP点击次数top10</h4>
+        <div id="picture_2" class="col-md-12" style="height:400px"></div>
     </div>
     <div id="row_7">
-        <h2>一、试用单位基本信息</h2>
-        <div id="picture_3" class="col-md-6" style="height:400px"></div>
+        <h4>4.2 IP点击次数top10</h4>
+        <div id="picture_3" class="col-md-12" style="height:400px"></div>
     </div>
     <div id="row_8">
-        <h2>一、试用单位基本信息</h2>
-        <div id="picture_4" class="col-md-6" style="height:400px"></div>
+        <h4>IP点击次数top10</h4>
+        <div id="picture_4" class="col-md-12" style="height:400px"></div>
     </div>
     <div id="row_9">
-        <h2>一、试用单位基本信息</h2>
-        <div id="picture_5" class="col-md-6" style="height:400px"></div>
+        <h4>IP点击次数top10</h4>
+        <div id="picture_5" class="col-md-12" style="height:400px"></div>
     </div>
     <div id="row_10">
-        <h2>一、试用单位基本信息</h2>
-        <div id="picture_6" class="col-md-6" style="height:400px"></div>
+        <h4>IP点击次数top10</h4>
+        <div id="picture_6" class="col-md-12" style="height:400px"></div>
     </div>
     <div id="row_11">
-        <h2>一、试用单位基本信息</h2>
-        <div id="picture_7" class="col-md-6" style="height:400px"></div>
+        <h4>IP点击次数top10</h4>
+        <div id="picture_7" class="col-md-12" style="height:400px"></div>
     </div>
 </div>
 
@@ -128,6 +131,11 @@
     });
     function getEcharts_1(obj){//实施率%
         var myChart = echarts.init(document.getElementById(obj));
+        var weatherIcons = {
+            'Sunny': './data/asset/img/weather/sunny_128.png',
+            'Cloudy': './data/asset/img/weather/cloudy_128.png',
+            'Showers': './data/asset/img/weather/showers_128.png'
+        };
 
         option = {
             title: {
@@ -176,6 +184,302 @@
         myChart.setOption(option);
     }
     function getEcharts_2(obj){//实施率%
+        var myChart = echarts.init(document.getElementById(obj));
+
+        var weatherIcons = {
+            'Sunny': './data/asset/img/weather/sunny_128.png',
+            'Cloudy': './data/asset/img/weather/cloudy_128.png',
+            'Showers': './data/asset/img/weather/showers_128.png'
+        };
+
+        option = {
+            title: {
+                text: '天气情况统计',
+                subtext: '虚构数据',
+                left: 'center'
+            },
+            tooltip : {
+                trigger: 'item',
+                formatter: "{a} <br/>{b} : {c} ({d}%)"
+            },
+            legend: {
+                // orient: 'vertical',
+                // top: 'middle',
+                bottom: 10,
+                left: 'center',
+                data: ['西凉', '益州','兖州','荆州','幽州']
+            },
+            series : [
+                {
+                    type: 'pie',
+                    radius : '65%',
+                    center: ['50%', '50%'],
+                    selectedMode: 'single',
+                    data:[
+                        {
+                            value:1548,
+                            name: '幽州',
+                            label: {
+                                normal: {
+                                    formatter: [
+                                        '{title|{b}}{abg|}',
+                                        '  {weatherHead|天气}{valueHead|天数}{rateHead|占比}',
+                                        '{hr|}',
+                                        '  {Sunny|}{value|202}{rate|55.3%}',
+                                        '  {Cloudy|}{value|142}{rate|38.9%}',
+                                        '  {Showers|}{value|21}{rate|5.8%}'
+                                    ].join('\n'),
+                                    backgroundColor: '#eee',
+                                    borderColor: '#777',
+                                    borderWidth: 1,
+                                    borderRadius: 4,
+                                    rich: {
+                                        title: {
+                                            color: '#eee',
+                                            align: 'center'
+                                        },
+                                        abg: {
+                                            backgroundColor: '#333',
+                                            width: '100%',
+                                            align: 'right',
+                                            height: 25,
+                                            borderRadius: [4, 4, 0, 0]
+                                        },
+                                        Sunny: {
+                                            height: 30,
+                                            align: 'left',
+                                            backgroundColor: {
+                                                image: weatherIcons.Sunny
+                                            }
+                                        },
+                                        Cloudy: {
+                                            height: 30,
+                                            align: 'left',
+                                            backgroundColor: {
+                                                image: weatherIcons.Cloudy
+                                            }
+                                        },
+                                        Showers: {
+                                            height: 30,
+                                            align: 'left',
+                                            backgroundColor: {
+                                                image: weatherIcons.Showers
+                                            }
+                                        },
+                                        weatherHead: {
+                                            color: '#333',
+                                            height: 24,
+                                            align: 'left'
+                                        },
+                                        hr: {
+                                            borderColor: '#777',
+                                            width: '100%',
+                                            borderWidth: 0.5,
+                                            height: 0
+                                        },
+                                        value: {
+                                            width: 20,
+                                            padding: [0, 20, 0, 30],
+                                            align: 'left'
+                                        },
+                                        valueHead: {
+                                            color: '#333',
+                                            width: 20,
+                                            padding: [0, 20, 0, 30],
+                                            align: 'center'
+                                        },
+                                        rate: {
+                                            width: 40,
+                                            align: 'right',
+                                            padding: [0, 10, 0, 0]
+                                        },
+                                        rateHead: {
+                                            color: '#333',
+                                            width: 40,
+                                            align: 'center',
+                                            padding: [0, 10, 0, 0]
+                                        }
+                                    }
+                                }
+                            }
+                        },
+                        {value:535, name: '荆州'},
+                        {value:510, name: '兖州'},
+                        {value:634, name: '益州'},
+                        {value:735, name: '西凉'}
+                    ],
+                    itemStyle: {
+                        emphasis: {
+                            shadowBlur: 10,
+                            shadowOffsetX: 0,
+                            shadowColor: 'rgba(0, 0, 0, 0.5)'
+                        }
+                    }
+                }
+            ]
+        };
+
+
+
+        // 使用刚指定的配置项和数据显示图表。
+        myChart.setOption(option);
+    }
+    function getEcharts_3(obj){//实施率%
+        var myChart = echarts.init(document.getElementById(obj));
+
+        option = {
+            title: {
+                text: '折线图堆叠'
+            },
+            tooltip: {
+                trigger: 'axis'
+            },
+            legend: {
+                data:['邮件营销','联盟广告','视频广告','直接访问','搜索引擎']
+            },
+            grid: {
+                left: '3%',
+                right: '4%',
+                bottom: '3%',
+                containLabel: true
+            },
+            toolbox: {
+                feature: {
+                    saveAsImage: {}
+                }
+            },
+            xAxis: {
+                type: 'category',
+                boundaryGap: false,
+                data: ['周一','周二','周三','周四','周五','周六','周日']
+            },
+            yAxis: {
+                type: 'value'
+            },
+            series: [
+                {
+                    name:'邮件营销',
+                    type:'line',
+                    stack: '总量',
+                    data:[120, 132, 101, 134, 90, 230, 210]
+                },
+                {
+                    name:'联盟广告',
+                    type:'line',
+                    stack: '总量',
+                    data:[220, 182, 191, 234, 290, 330, 310]
+                },
+                {
+                    name:'视频广告',
+                    type:'line',
+                    stack: '总量',
+                    data:[150, 232, 201, 154, 190, 330, 410]
+                },
+                {
+                    name:'直接访问',
+                    type:'line',
+                    stack: '总量',
+                    data:[320, 332, 301, 334, 390, 330, 320]
+                },
+                {
+                    name:'搜索引擎',
+                    type:'line',
+                    stack: '总量',
+                    data:[820, 932, 901, 934, 1290, 1330, 1320]
+                }
+            ]
+        };
+
+
+
+        // 使用刚指定的配置项和数据显示图表。
+        myChart.setOption(option);
+    }
+    function getEcharts_4(obj){//实施率%
+        var myChart = echarts.init(document.getElementById(obj));
+
+        option = {
+            title: {
+                text: '世界人口总量',
+                subtext: '数据来自网络'
+            },
+            tooltip: {
+                trigger: 'axis',
+                axisPointer: {
+                    type: 'shadow'
+                }
+            },
+            legend: {
+                data: ['2011年', '2012年']
+            },
+            grid: {
+                left: '3%',
+                right: '4%',
+                bottom: '3%',
+                containLabel: true
+            },
+            xAxis: {
+                type: 'value',
+                boundaryGap: [0, 0.01]
+            },
+            yAxis: {
+                type: 'category',
+                data: ['巴西','印尼','美国','印度','中国','世界人口(万)']
+            },
+            series: [
+                {
+                    name: '2011年',
+                    type: 'bar',
+                    data: [18203, 23489, 29034, 104970, 131744, 630230]
+                },
+                {
+                    name: '2012年',
+                    type: 'bar',
+                    data: [19325, 23438, 31000, 121594, 134141, 681807]
+                }
+            ]
+        };
+
+
+        // 使用刚指定的配置项和数据显示图表。
+        myChart.setOption(option);
+    }
+    function getEcharts_5(obj){//实施率%
+        var myChart = echarts.init(document.getElementById(obj));
+
+        var option = {
+            tooltip : {},
+            series : [ {
+                type : 'wordCloud',
+                shape:'smooth',
+                gridSize : 2,
+                sizeRange : [ 50, 100 ],
+                rotationRange : [ 46, 80 ],
+                textStyle : {
+                    normal : {
+                        color : function() {
+                            return 'rgb('
+                                + [ Math.round(Math.random() * 160),
+                                    Math.round(Math.random() * 160),
+                                    Math.round(Math.random() * 160) ]
+                                    .join(',') + ')';
+                        }
+                    },
+                    emphasis : {
+                        shadowBlur : 10,
+                        shadowColor : '#333'
+                    }
+                },
+                data : ['直接访问','邮件营销','联盟广告','视频广告','搜索引擎']
+            } ]
+        };
+
+
+
+        // 使用刚指定的配置项和数据显示图表。
+        myChart.setOption(option);
+    }
+    function getEcharts_6(obj){//实施率%
         var myChart = echarts.init(document.getElementById(obj));
         var weatherIcons = {
             'Sunny': './data/asset/img/weather/sunny_128.png',
@@ -314,127 +618,7 @@
         // 使用刚指定的配置项和数据显示图表。
         myChart.setOption(option);
     }
-    function getEcharts_3(obj){//实施率%
-        var myChart = echarts.init(document.getElementById(obj));
-
-        option = {
-            title: {
-                text: '折线图堆叠'
-            },
-            tooltip: {
-                trigger: 'axis'
-            },
-            legend: {
-                data:['邮件营销','联盟广告','视频广告','直接访问','搜索引擎']
-            },
-            grid: {
-                left: '3%',
-                right: '4%',
-                bottom: '3%',
-                containLabel: true
-            },
-            toolbox: {
-                feature: {
-                    saveAsImage: {}
-                }
-            },
-            xAxis: {
-                type: 'category',
-                boundaryGap: false,
-                data: ['周一','周二','周三','周四','周五','周六','周日']
-            },
-            yAxis: {
-                type: 'value'
-            },
-            series: [
-                {
-                    name:'邮件营销',
-                    type:'line',
-                    stack: '总量',
-                    data:[120, 132, 101, 134, 90, 230, 210]
-                },
-                {
-                    name:'联盟广告',
-                    type:'line',
-                    stack: '总量',
-                    data:[220, 182, 191, 234, 290, 330, 310]
-                },
-                {
-                    name:'视频广告',
-                    type:'line',
-                    stack: '总量',
-                    data:[150, 232, 201, 154, 190, 330, 410]
-                },
-                {
-                    name:'直接访问',
-                    type:'line',
-                    stack: '总量',
-                    data:[320, 332, 301, 334, 390, 330, 320]
-                },
-                {
-                    name:'搜索引擎',
-                    type:'line',
-                    stack: '总量',
-                    data:[820, 932, 901, 934, 1290, 1330, 1320]
-                }
-            ]
-        };
-
-
-
-        // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
-    }
-    function getEcharts_4(obj){//实施率%
-        var myChart = echarts.init(document.getElementById(obj));
-
-        option = {
-            title: {
-                text: '世界人口总量',
-                subtext: '数据来自网络'
-            },
-            tooltip: {
-                trigger: 'axis',
-                axisPointer: {
-                    type: 'shadow'
-                }
-            },
-            legend: {
-                data: ['2011年', '2012年']
-            },
-            grid: {
-                left: '3%',
-                right: '4%',
-                bottom: '3%',
-                containLabel: true
-            },
-            xAxis: {
-                type: 'value',
-                boundaryGap: [0, 0.01]
-            },
-            yAxis: {
-                type: 'category',
-                data: ['巴西','印尼','美国','印度','中国','世界人口(万)']
-            },
-            series: [
-                {
-                    name: '2011年',
-                    type: 'bar',
-                    data: [18203, 23489, 29034, 104970, 131744, 630230]
-                },
-                {
-                    name: '2012年',
-                    type: 'bar',
-                    data: [19325, 23438, 31000, 121594, 134141, 681807]
-                }
-            ]
-        };
-
-
-        // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
-    }
-    function getEcharts_5(obj){//实施率%
+    function getEcharts_7(obj){//实施率%
         var myChart = echarts.init(document.getElementById(obj));
 
         option = {
